other-vpol/limit-containers-per-pod/limit-containers-per-pod.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: limit-containers-per-pod
  annotations:
    policies.kyverno.io/title: Limit Containers per Pod in ValidatingPolicy
    policies.kyverno.io/category: Sample in Vpol 
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Pods can have many different containers which
      are tightly coupled. It may be desirable to limit the amount of containers that
      can be in a single Pod to control best practice application or so policy can
      be applied consistently. This policy checks all Pods to ensure they have
      no more than four containers.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: "size(object.spec.containers) <= 4"
      message: "Pods can only have a maximum of 4 containers."
